--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@vue/cli-service": "~4.5.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
+    "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
